feat: do not tile matplotlib windows

--- a/dot_glzr/glazewm/config.yaml
+++ b/dot_glzr/glazewm/config.yaml
@@ -111,15 +111,20 @@ window_rules:
       # Ignores any Zebar windows.
       - window_process: { equals: 'zebar' }
 
-      # Ignores picture-in-picture windows for browsers.
+      # Ignores picture-in-picture windows
       - window_title: { regex: '[Pp]icture.in.[Pp]icture' }
-        # window_class: { regex: 'Chrome_WidgetWin_1|MozillaDialogClass|Arc' }
 
       # Ignore rules for various 3rd-party apps.
       - window_process: { equals: 'PowerToys' }
         window_class: { regex: 'HwndWrapper\[PowerToys\.PowerAccent.*?\]' }
       - window_process: { equals: 'Lively' }
         window_class: { regex: 'HwndWrapper*' }
+
+  # - commands: ["set-floating"]
+  #   match:
+      # Set matplotlib figures to floating
+      - window_process: { equals: 'python' }
+        window_title: { regex: 'Figure*' }
 
 binding_modes:
   # # When enabled, the focused window can be resized via arrow keys or HJKL.
