--- a/dot_config/ansible/bootstrap.yaml
+++ b/dot_config/ansible/bootstrap.yaml
@@ -20,10 +20,13 @@
       vars:
         tool_name: "brew"
         installer_url: "https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh"
+        cmd_args:
+          - ""
     - role: shinstaller
       vars:
         tool_name: "zoxide"
         installer_url: "https://raw.githubusercontent.com/ajeetdsouza/zoxide/main/install.sh"
+        cmd_args:
+          - ""
     - brew
-
-
+    - nvim
