--- a/dot_glzr/glazewm/config.yaml
+++ b/dot_glzr/glazewm/config.yaml
@@ -127,7 +127,9 @@ window_rules:
         window_title: { regex: 'Figure*' }
 
       - window_process: { equals: 'msrdc' }
-        window_title: { regex: 'Figure*' }
+        # window_title: { regex: 'Figure*' }
+        #
+      - window_title: { equals: 'Arc extension popup' }
 
 binding_modes:
   # When enabled, the focused window can be resized via arrow keys or HJKL.
