--- a/dot_config/ansible/roles/brew/tasks/main.yaml
+++ b/dot_config/ansible/roles/brew/tasks/main.yaml
@@ -5,5 +5,7 @@
   when: ansible_os_family == 'Darwin' or ansible_distribution == 'Ubuntu'
 
 - name: Install Homebrew apps
-  ansible.builtin.shell: "brew bundle --file={{ ansible_env.HOME }}/.config/brew/Brewfile"
+  ansible.builtin.shell:
+    cmd: "brew bundle --file={{ ansible_env.HOME }}/.config/brew/Brewfile"
+    executable: /bin/zsh
   when: ansible_os_family == 'Darwin' or ansible_distribution == 'Ubuntu'
